--- a/composer.json
+++ b/composer.json
@@ -56,5 +56,6 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "barryvdh/laravel-translation-manager": "0.2.x@dev"
 }
